--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,10 +4,11 @@ Facebook: facebook.com/ProcedimentosEmTI
 Facebook: facebook.com/BoraParaPratica
 YouTube: youtube.com/BoraParaPratica
 Data de criação: 06/10/2021
-Data de atualização: 06/10/2021
-Versão: 0.1
+Data de atualização: 10/10/2021
+Versão: 0.2
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 Kernel >= 5.4.x
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
-06/10/2021 - Robson Vaamonde - Criação do repositório e configuração dos script para a nova versão do Ubuntu
+10/10/2021 - Copia dos scripts da versão 18.04.x e organização dos novos diretórios e criação do arquivo paramentros.sh
+06/10/2021 - Robson Vaamonde - Criação do repositório e configuração dos script para a nova versão do Ubuntu 20.04.x
