--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,14 +6,14 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 11/10/2021
+# Data de atualização: 12/10/2021
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
-12/10/2021 - Robson Vaamonde - Customização do script: 02-dnsdhcp.sh e dos arquivos de configuração dos serviços de:
-hostname, 00-installer-config.yaml, dhcpd.conf, named.conf, named.conf.local, named.conf.options, pti.intra.hosts, 
-172.16.1.rev e dnsupdate-cron.
+12/10/2021 - Robson Vaamonde - Customização dos scripts: 02-dhcp.sh, 03-dns.sh e 04-dhcpdns.sh e dos arquivos de 
+configuração dos serviços de: hostname, hosts, nsswitch.conf, 00-installer-config.yaml, dhcpd.conf, named.conf, 
+named.conf.local, named.conf.options, pti.intra.hosts, 172.16.1.rev e dnsupdate-cron.
 
 11/10/2021 - Robson Vaamonde - Customização do script: 01-openssh.sh e dos arquivos de configuração dos serviços de: 
 issue.net, hosts, hosts.allow, hosts.deny e sshd_config, todos customizados para a versão 20.04.x do Ubuntu Server
