--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,17 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 12/10/2021
-# Versão: 0.02
+# Data de atualização: 13/10/2021
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+13/10/2021 - Robson Vaamonde - Substituição do comando dnssec-keygen pelo comando tsig-keygen no script: 04-dhcpdns.sh
+conforme documentação do MAN do comando dnssec-keygen o suporte ao HMAC-MD5 foi descontinuado a partir da versão 9.13
+do Bind9 DNS Server, para usar essa opção você precisa utilizar o comando tsig-keygen. Correções no script: 05-ntp.sh
+e seu arquivo de configuração: ntp.conf. Customização do script: 06-tftp.sh, remoção dos recursos de PXE e Syslinux e 
+customização do arquivo de configuração: tftp-hpa.
+
 12/10/2021 - Robson Vaamonde - Customização dos scripts: 02-dhcp.sh, 03-dns.sh e 04-dhcpdns.sh e dos arquivos de 
 configuração dos serviços de: hostname, hosts, nsswitch.conf, 00-installer-config.yaml, dhcpd.conf, named.conf, 
 named.conf.local, named.conf.options, pti.intra.hosts, 172.16.1.rev e dnsupdate-cron.
