--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,14 @@
-# Autor: Robson Vaamonde
-# Site: www.procedimentosemti.com.br
-# Facebook: facebook.com/ProcedimentosEmTI
-# Facebook: facebook.com/BoraParaPratica
-# YouTube: youtube.com/BoraParaPratica
-# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
-# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
-# Data de criação: 10/10/2021
-# Data de atualização: 14/10/2021
-# Versão: 0.04
-# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+Autor: Robson Vaamonde
+Site: www.procedimentosemti.com.br
+Facebook: facebook.com/ProcedimentosEmTI
+Facebook: facebook.com/BoraParaPratica
+YouTube: youtube.com/BoraParaPratica
+Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+Data de criação: 10/10/2021
+Data de atualização: 14/10/2021
+Versão: 0.04
+Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
 14/10/2021 - Robson Vaamonde - Adicionado o comando: timedatectl set-timezone no script: 05-ntp.sh e criado a variável
@@ -18,7 +18,7 @@ arquivo named referente ao serviço do Bind9 DNS Server, adicionado a opção -4
 o arquivo named no script: 03-dns.sh, aplicado o Path de Correção da falha: rndc: connect failed: 127.0.0.1#953: 
 connection refused no no script: 03-dns.sh comando: chown -v root:bind /etc/bind/rndc.key. Correção da falha do Bind9 
 referente a mensagens no Systemctl de: file does not end with newline, adicionado uma linha no final do arquivo da Zona
-de Pesquisa direta: pti.intra.hosts (O Bind espera um neline no final de seus arquivos de configuração. Adicione uma 
+de Pesquisa direta: pti.intra.hosts (O Bind espera uma nova linha no final de seus arquivos de configuração. Adicione uma 
 nova linha no final do arquivo após a entrada que você adicionou manualmente.). Correção da falha do Bind9 referente a 
 mensagens no Systemctl de: MX is a CNAME (illegal), alterado as configurações do MX Mail no arquivo de Zona de Pesquisa
 direta: pti.intra.hosts, retirado: 10 mail.pti.intra. deixado só: 10 mail, mudado a linha: mail IN CNAME ptispo01ws01
