--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,14 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 15/10/2021
-Versão: 0.05
+Data de atualização: 17/10/2021
+Versão: 0.06
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+17/10/2021 - Robson Vaamonde - Melhorias no script: 08-openssl.sh com foco principal na documentação e organização do
+script nas variáveis do arquivo: 00-parametros.sh, remoção da criação do usuário: wordpress do script 09-vsftpd.sh
+
 15/10/2021 - Robson Vaamonde - Melhorias no script: 07-lamp.sh, atualização da versão do Debconf do Mysql Server para
 a versão 8.0, acréscimo da dependência do PhpMyAdmin php-json e retirada do: php-gettext no Ubuntu 20.04.x o suporte
 ao php-getttext foi retirado dos repositórios oficiais, remoção da versão do pecl install mcrypt para facilitar o
