--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,18 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 17/10/2021
-Versão: 0.06
+Data de atualização: 18/10/2021
+Versão: 0.07
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+18/10/2021 - Robson Vaamonde - Acréscimo do Bloco de verificação de dependências no script: 04-dhcpdns.sh, correção
+e atualização dos arquivos de configuração do Vsftpd Server, customização do script 10-wordpress.sh, criação das
+variáveis no arquivo: 00-parametros.sh, melhoria no script do wordpress colocando o usuário do FTP do diretório wp,
+criação do Virtual Host do Wordpress utilizando ponteiros no Bind DNS, atualização dos arquivos de configuração do
+Wordpress, melhoria na documentação do arquivo wp-config.php do Wordpress, melhoria da segurança do Wordpress nos
+arquivos de Virtual Host e .Htaccess. 
+
 17/10/2021 - Robson Vaamonde - Melhorias no script: 08-openssl.sh com foco principal na documentação e organização do
 script nas variáveis do arquivo: 00-parametros.sh, remoção da criação do usuário: wordpress do script 09-vsftpd.sh,
 acréscimo da cópia dos arquivos hosts, hostname e nsswitch.conf no script: 01-openssh.sh, retirado as linhas de edição 
