--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,8 +6,8 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 19/10/2021
-Versão: 0.08
+Data de atualização: 20/10/2021
+Versão: 0.09
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
@@ -16,7 +16,9 @@ script: 02-openssh.sh, backup e atualização do arquivo 00-installer-config.yam
 edição do arquivo rndc.key no script: 03-dns.sh, acréscimo da verificação da porta TCP 953 no script: 03-dns.sh,
 melhoria no script: 04-dhcpdns.sh na geração da chave TSIG, criação do arquivo ntp com suporte somente ao IPv4 e
 acréscimo da edição do arquivo no script: 05-ntp.sh, melhoria no arquivo de configuração ntp.conf, criação do arquivo
-ports.conf do Apache2, configurado para suportar somente o protocolo IPv4, desabilitando o suporte ao IPv6, 
+ports.conf do Apache2, arquivo configurado para suportar somente o protocolo IPv4, desabilitando o suporte ao IPv6, 
+acréscimo do arquivo 00-default.conf do Apache2 no script: 07-lamp.sh, configuração do vsftpd.conf para suportar
+somente IPv4.
 
 19/10/2021 - Robson Vaamonde - Criação do arquivo HELP, nesse arquivo está os procedimentos básicos para utilizar os
 scripts desse curso, todo os procedimentos básicos para utilizar esse repositório e customizar os scripts ou arquivos
