--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,7 +16,8 @@ verificação da consultado do domínio: dig no script: 03-dns.sh, criação da 
 00-paramentros.sh para facilitar a atualização das chaves de integração do Bind DNS e do ISC DHCP Server, acréscimo
 da linha de verificar do Status dos serviços em todos os scripts, criação do Virtual Host do LogAnalyzer, customização
 do script: 18-guacamole.sh com suas variáveis no arquivo: 00-parametros.sh, acrescimo da linha: zone-statistics yes; 
-no arquivo: named.conf.options, 
+no arquivo: named.conf.options, criação do usuário do Netdata no Banco de Dados do MySQL no script: 13-netdata.sh e
+no bloco de configuração do arquivo: 00-parametros.sh.
 
 06/12/2021 - Robson Vaamonde - Melhoria na documentação do monitoramento de Log's dos serviços de rede utilizando o
 script: 00-paramentros.sh, correção do Bug do Log do VSFTPd criando o arquivo no script: 09-vsftp.sh, 
