--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,12 +6,18 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 19/12/2021
-Versão: 0.23
+Data de atualização: 23/12/2021
+Versão: 0.24
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
-19/12/2021 - Robson Vaamonde - Correções de vários scripts e homologação dos scripts até 27-bacula, 
+23/12/2021 - Robson Vaamonde - Correções de vários scripts em relação ao PT-BR e melhorias na estrutura e documentação
+finalizado a homologação dos scripts até 29-postgresql.sh. Preparação para a gravação das aulas em Janeiro de 2022,
+criação do roteiro e linha de base para a gravação dos vídeos, criação da estrutura de diretórios, scripts que ainda 
+não foram migrados estão no diretório referente ao seu serviço, somente após a migração será acréscentado o seu número
+de sequência e se esse script pode ser instalado junto com os demais.
+
+19/12/2021 - Robson Vaamonde - Correções de vários scripts e homologação dos scripts até 27-bacula.
 
 15/12/2021 - Robson Vaamonde - Várias melhorias nos scripts em geral para facilitar os procedimentos de gravação dos
 vídeos em 2022, correções dos Bugs do Netdata, GLPI, Tomcat na Base de Dados da Agenda, e melhorias na documentação e 
