--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,14 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 09/01/2022
-Versão: 0.26
+Data de atualização: 11/01/2022
+Versão: 0.27
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+11/01/2022 - Robson Vaamonde - Correção dos Bugs referente ao uso do Wordpress que foram reportados pelo Prof. José
+de Assis, correções dos arquivos: 00-parametros.sh, 00-default.conf, htaccess, wordpress.conf e wp-config.php
+
 10/01/2022 - Robson Vaamonde - Criação do arquivo de configuração envvars do Apache2 para corrigir a falha de PT-BR
 do Nextcloud, acréscimo da linha de edição do arquivo no script: 07-lamp.sh, melhoria em todos os scripts com a opção
 do comando: read -s para remover a quebra de linha após editar os arquivos,
