--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,14 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 12/01/2022
-Versão: 0.28
+Data de atualização: 14/01/2022
+Versão: 0.30
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+14/01/2022 - Robson Vaamonde - Criação dos script: 33-asterisk.sh, customização dos seus arquivos de configuração e
+atualização para a nova versão: 19.1.x.
+
 13/01/2022 - Robson Vaamonde - Criação do arquivo PORTS com especificações das Portas TCP e UDP dos Serviços de Rede
 utilizados pelos Scripts, atualização do versão do OpenFire para: 4.67, alteração da versão do ownCloud para o arquivo
 latest.tar.bz2, atualização do arquivo: 11-wordpress.sh alteração do nome do arquivo de download para: wordpress.zip
