--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,7 +12,8 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
 14/01/2022 - Robson Vaamonde - Criação dos script: 33-asterisk.sh, customização dos seus arquivos de configuração e
-atualização para a nova versão: 19.1.x.
+atualização para a nova versão: 19.1.x., acréscimo da dependência: php-soap no arquivo: 00-paramentros.sh referente
+a Loja Virtual do Wordpress repotado pelo Prof. José de Assis.
 
 13/01/2022 - Robson Vaamonde - Criação do arquivo PORTS com especificações das Portas TCP e UDP dos Serviços de Rede
 utilizados pelos Scripts, atualização do versão do OpenFire para: 4.67, alteração da versão do ownCloud para o arquivo
